env/code_53e9d6b36bb09/stderr.txt
  File "main.py", line 2
    print "sdfs"
               ^
SyntaxError: invalid syntax
